# HeroPy

./: .gitignore  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  README.md  TODO.md  mkdocs.yml  pyproject.toml  ruff.toml  ty.txt
.github/: IMPLEMENTATION_SUMMARY.md  WORKFLOW_ARCHITECTURE.md  copilot-instructions.md
.github/actions/fetch-subpackage-artifact/: README.md  action.yml
.github/skills/heropy-test-workflow/: SKILL.md
.github/skills/uv-lint-typecheck/: SKILL.md
.github/workflows/: backup-trigger.yml  bump-version-by-labels.yml  docs.yml  lint.yml  markdown.yml  publish.yml  pypi.yml  release-root.yml  test.yml
.github/workflows/backup/: ci.yml  release-trigger.yml  release.yml
.github/workflows/color/: ci.yml  release-trigger.yml  release.yml
.github/workflows/config/: ci.yml  release-trigger.yml  release.yml
.github/workflows/examples/: ci.yml  release-trigger.yml  release.yml
.github/workflows/log/: ci.yml  release-trigger.yml  release.yml
.github/workflows/rainbow/: ci.yml  release-trigger.yml  release.yml
.github/workflows/sentinel/: ci.yml  release-trigger.yml  release.yml
.github/workflows/tree/: ci.yml  release-trigger.yml  release.yml
docs/: index.md  usage.md
docs/examples/: arguments.md  index.md  logic.md  migrations.md  subcommands.md
docs/reference/: argparse.md  index.md  logic.md  orm.md  utilities.md
examples/: arguments.py  generator_queue.py  state.py  subcommands.py  wrappers.py
herogold/: pyproject.toml
herogold/backup/: pyproject.toml
herogold/color/: pyproject.toml
herogold/config/: pyproject.toml
herogold/examples/: pyproject.toml
herogold/log/: pyproject.toml
herogold/progress/: pyproject.toml
herogold/rainbow/: pyproject.toml
herogold/sentinel/: pyproject.toml
herogold/src/herogold/: __init__.py
herogold/tree/: pyproject.toml
scripts/: compare_version.py  compute_diffs.py  download_artifact.sh  gather_namespace_artifacts.sh  get_version.py  py_import_checker.sh  unpack_artifacts.sh
src/herogold/: asynchronous.py  cache.py  colors.py  errors.py  loops.py  mangling.py  progress.py  protocols.py  rainbow.py  random.py  sentinel.py  state.py  supports.py  tempfile.py  workers.py
src/herogold/algorithms/: README.md  __init__.py
src/herogold/argparse/: __init__.py  argument.py  subparser.py  subparser_README.md
src/herogold/auto_update/: __init__.py  config.py  connectors.py  main.py  sources.py
src/herogold/backup/: backup.py
src/herogold/log/: __init__.py  formats.py  handlers.py  logger.py  logger_mixin.py  logging.py
src/herogold/logic/: __init__.py  action.py  predicate.py  trigger.py
src/herogold/orm/: __init__.py  api_model.py  check_tables.py  config.py  constants.py  custom_data.py  errors.py  migrate_cli.py  migrations.py  migrations_README.md  model.py  utils.py
tests/: test_314_loggers.py  test_api_query.py  test_color.py  test_config.py  test_errors.py  test_logic_action.py  test_logic_predicate.py  test_logic_trigger.py  test_loops.py  test_mangling.py  test_orm_password.py  test_orm_relationships.py  test_progress.py  test_random.py  test_relationship.py  test_sentinel.py  test_supports.py  test_workers.py
(+435 files in other folders)
