[project]
name = "herogold"
version = "3.0.0"
description = "A single package containing personal utilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typing-extensions>=4.15.0",
]
authors = [{ name = "HEROgold" }]
license = { text = "MIT" }

[project.optional-dependencies]
orm = [
    "confkit>=1.3.0",
    "sqlmodel>=0.0.37",
]
api = [
    "fastapi>=0.135.1",
]
orm-api = ["herogold[orm]", "herogold[api]"]
all = [
    "herogold[orm-api]"
]
services = [
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/HEROgold/HeroPy"
Repository = "https://github.com/HEROgold/HeroPy.git"
Documentation = "https://github.com/HEROgold/HeroPy#readme"
Issues = "https://github.com/HEROgold/HeroPy/issues"

[build-system]
requires = ["hatchling>=1"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
]

[tool.ty.src]
exclude = ["tests"]
