[project]
name = "herogold"
version = "3.1.0"
description = "A single package containing personal utilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typing-extensions>=4.15.0",
]
authors = [{ name = "HEROgold" }]
license = { text = "MIT" }

[project.optional-dependencies]
orm = [
    "confkit>=2.0.0",
    "sqlmodel>=0.0.38",
]
api = [
    "fastapi>=0.136.1",
]
orm-api = ["herogold[orm]", "herogold[api]"]
all = [
    "herogold[orm-api]"
]
services = [
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/HEROgold/HeroPy"
Repository = "https://github.com/HEROgold/HeroPy.git"
Documentation = "https://github.com/HEROgold/HeroPy#readme"
Issues = "https://github.com/HEROgold/HeroPy/issues"

[build-system]
requires = ["hatchling>=1"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "herogold[all]",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
]

[tool.ty.src]
exclude = ["tests"]
